@@ -29,6 +29,7 @@ Verilator 5.005 devel
 * Fix memory leak in V3Sched, etc. (#3834). [Geza Lore]
 * Fix compatibility with musl libc / Alpine Linux (#3845). [Sören Tempel]
 * Fix empty case items crash (#3851). [rporter]
+* Fix foreach unnamedblk duplicate error (#3885). [Ilya Barkov]
 
 
 Verilator 5.004 2022-12-14
